Fix maily unsubscribe url helper name.

--- a/app/views/layouts/user_mailer.text.erb
+++ b/app/views/layouts/user_mailer.text.erb
@@ -2,4 +2,4 @@ Hi <%= @maily_entity.name %>!
 
 <%= yield %>
 
-To unsubscribe click here: <%= maily_herald_engine.unsubscribe_url(@maily_subscription) %>
+To unsubscribe click here: <%= maily_herald_engine.maily_unsubscribe_url(@maily_subscription) %>
