--- a/app/views/layouts/user_mailer.text.erb
+++ b/app/views/layouts/user_mailer.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @maily_entity.name %>!
+Hi <%= @maily.entity.name %>!
 
 <%= yield %>
 
-To unsubscribe click here: <%= maily_herald_engine.maily_unsubscribe_url(@maily_subscription) %>
+To unsubscribe click here: <%= maily_herald_engine.maily_unsubscribe_url(@maily.subscription) %>
